UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AB_Cell__c.field-meta.xml
<CustomField>
    <fullName>AB_Cell__c</fullName>
    <label>AB Cell</label>
    <type>Phone</type>
</CustomField>