UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AB_Email__c.field-meta.xml
<CustomField>
    <fullName>AB_Email__c</fullName>
    <label>AB Email</label>
    <type>Email</type>
</CustomField>