UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AB_Fax__c.field-meta.xml
<CustomField>
    <fullName>AB_Fax__c</fullName>
    <label>AB Fax</label>
    <type>Phone</type>
</CustomField>