UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AB_Phone__c.field-meta.xml
<CustomField>
    <fullName>AB_Phone__c</fullName>
    <label>AB Phone</label>
    <type>Phone</type>
</CustomField>