UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Access_Medium__c.field-meta.xml
<CustomField>
    <fullName>Access_Medium__c</fullName>
    <label>Access Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>