UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Account_Channel__c.field-meta.xml
<CustomField>
    <fullName>Account_Channel__c</fullName>
    <label>Account Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connected Community</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>VZ3 Agreements</fullName>
            </value>
            <value>
                <fullName>Alternate Channel</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>