UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Account_Id_Caps__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Caps__c</fullName>
    <externalId>true</externalId>
    <label>Account Id Caps</label>
    <length>20</length>
    <type>Text</type>
</CustomField>