UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>