UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Account_Plan_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Segmentation__c</fullName>
    <description>Added by Hernan for Account Planning Optimizer Object</description>
    <inlineHelpText>Acquire (High Growth): Material Opportunities to grow existing and new services
Develop (Growth): Material opportunities to grow existing services
Retain: Retention motions primarily
Light-Touch: No material growth or renewal opportunities</inlineHelpText>
    <label>Account Plan Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquire (High Growth)</fullName>
            </value>
            <value>
                <fullName>Develop (Growth)</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
            <value>
                <fullName>Light Touch</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>