UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Account_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Type__c</fullName>
    <description>Used for the Account Optimizer object added by Hernan</description>
    <label>Account Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>