UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AccountNumericCheck__c.field-meta.xml
<CustomField>
    <fullName>AccountNumericCheck__c</fullName>
    <formula>ISNUMBER(SUBSTITUTE(Name, &quot;.0&quot;, &quot;&quot;) )</formula>
    <label>AccountNumericCheck</label>
    <type>Checkbox</type>
</CustomField>