UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <label>Account OwnerX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>