UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/AccountTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeFormula__c</fullName>
    <formula>IF(
 TRIM(Account_Type__c)=&quot;0&quot;,
 &quot;Home Grown EBill&quot;,
 IF(
  TRIM(Account_Type__c)=&quot;1&quot;,
  &quot;Standard&quot;,
  IF(
   TRIM(Account_Type__c)=&quot;2&quot;,
   &quot;Premium&quot;,
   IF(
    TRIM(Account_Type__c)=&quot;3&quot;,
    &quot;EDI&quot;,
    &quot;&quot;
   ) 
  ) 
 ) 
)</formula>
    <label>AccountTypeFormula</label>
    <type>Text</type>
</CustomField>