UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Activation_Dt__c.field-meta.xml
<CustomField>
    <fullName>Acct_Activation_Dt__c</fullName>
    <label>Account Activation Date</label>
    <type>Date</type>
</CustomField>