UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Bill_Sys_Cd__c.field-meta.xml
<CustomField>
    <fullName>Acct_Bill_Sys_Cd__c</fullName>
    <label>Acct Bill Sys Cd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>