UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Cust_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Acct_Cust_End_Date__c</fullName>
    <label>Account Customer End Date</label>
    <type>Date</type>
</CustomField>