UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Cust_Type_Ds__c.field-meta.xml
<CustomField>
    <fullName>Acct_Cust_Type_Ds__c</fullName>
    <label>Acct Cust Type Ds</label>
    <length>60</length>
    <type>Text</type>
</CustomField>