UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Payable_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Acct_Payable_Vendor_ID__c</fullName>
    <label>Acct Payable Vendor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>