UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acct_Uniq_Cust_No__c.field-meta.xml
<CustomField>
    <fullName>Acct_Uniq_Cust_No__c</fullName>
    <label>Acct Uniq Cust No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>