UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Acctjoinkey__c.field-meta.xml
<CustomField>
    <fullName>Acctjoinkey__c</fullName>
    <label>Acctjoinkey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>