UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Active_Channels__c.field-meta.xml
<CustomField>
    <fullName>Active_Channels__c</fullName>
    <label>Active Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIG BOX</fullName>
            </value>
            <value>
                <fullName>COMMUNITY CONNECTIONS</fullName>
            </value>
            <value>
                <fullName>CROSS SELL</fullName>
            </value>
            <value>
                <fullName>DIGITAL PAID SEARCH</fullName>
            </value>
            <value>
                <fullName>DOOR TO DOOR-COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>DOOR TO DOOR-RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>MASTER AGENT</fullName>
            </value>
            <value>
                <fullName>PREMIER RETAIL</fullName>
            </value>
            <value>
                <fullName>REFERRAL AGENTS-RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>RETAIL AGENTS-RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>TELEMARKETING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>