UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Address_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to get both billing and service address on company when converting a lead</description>
    <label>Address Check</label>
    <type>Checkbox</type>
</CustomField>