UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Address_in_Service_Count__c.field-meta.xml
<CustomField>
    <fullName>Address_in_Service_Count__c</fullName>
    <label>Address in Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>