UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Address__c</fullName>
    <label>Agent Email Address</label>
    <type>Email</type>
</CustomField>