UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Agent_Job_Title__c</fullName>
    <label>Agent Job Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>