UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Mailing_Address__c</fullName>
    <label>Agent Mailing Address</label>
    <length>35</length>
    <type>Text</type>
</CustomField>