UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Agent_Mailing_Zip__c</fullName>
    <label>Agent Mailing Zip</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>