UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agent_Phone_Number__c</fullName>
    <label>Agent Phone Number</label>
    <type>Phone</type>
</CustomField>