UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Profile_Complete__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Profile Complete</label>
    <type>Checkbox</type>
</CustomField>