UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Profile_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Date_Submitted__c</fullName>
    <label>Agent Profile Date Submitted</label>
    <type>Date</type>
</CustomField>