UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Agent_Profile_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile_Days_to_Complete__c</fullName>
    <formula>Vendor_Profile_Date__c - Agent_Profile_Date_Submitted__c</formula>
    <label>Agent Profile - Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>