UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/All_Alt_Channels__c.field-meta.xml
<CustomField>
    <fullName>All_Alt_Channels__c</fullName>
    <inlineHelpText>Select all channels partner company is actively involved</inlineHelpText>
    <label>All Alt Channels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Door to Door - Commercial</fullName>
            </value>
            <value>
                <fullName>Paid Digital Search</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>