UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Are_we_the_only_Provider__c.field-meta.xml
<CustomField>
    <fullName>Are_we_the_only_Provider__c</fullName>
    <description>Used to determine if we&apos;re the only provider at the property or bidding on the property.</description>
    <inlineHelpText>Used to determine if we&apos;re the only provider at the property or bidding on the property.</inlineHelpText>
    <label>Are we the only Provider in / bidding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>