UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Assigned_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Rep__c</fullName>
    <label>Assigned Sales Rep</label>
    <type>TextArea</type>
</CustomField>