UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Authorized_Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Buyer_Contact__c</fullName>
    <label>Authorized Buyer Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>