UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Available_Door_Count__c.field-meta.xml
<CustomField>
    <fullName>Available_Door_Count__c</fullName>
    <label>Available Door Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>