UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Average_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Credit_Score__c</fullName>
    <label>Average Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>