UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Average_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Household_Size__c</fullName>
    <label>Average Household Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>