UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Average_Income__c.field-meta.xml
<CustomField>
    <fullName>Average_Income__c</fullName>
    <inlineHelpText>Average income of residents</inlineHelpText>
    <label>Average Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>