UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Bal_Count__c.field-meta.xml
<CustomField>
    <fullName>Bal_Count__c</fullName>
    <description>Count of Business Access Lines</description>
    <inlineHelpText>Count of Business Access Lines</inlineHelpText>
    <label>Bal Count</label>
    <length>5</length>
    <type>Text</type>
</CustomField>