UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Bal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bal_Customer__c</fullName>
    <description>Business Access Line Customer Indicator</description>
    <inlineHelpText>Identifies customers that currently have a at least one business access line</inlineHelpText>
    <label>Bal Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>