UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BAStreet_name__c.field-meta.xml
<CustomField>
    <fullName>BAStreet_name__c</fullName>
    <formula>RIGHT( BillingStreet ,LEN(BillingStreet ) - FIND(&quot; &quot;, BillingStreet ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAStreet name</label>
    <type>Text</type>
</CustomField>