UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BAStreet_Number__c.field-meta.xml
<CustomField>
    <fullName>BAStreet_Number__c</fullName>
    <formula>LEFT( BillingStreet , FIND(&quot; &quot;, BillingStreet ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAStreet Number</label>
    <type>Text</type>
</CustomField>