UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BB_Purchased_Speed__c.field-meta.xml
<CustomField>
    <fullName>BB_Purchased_Speed__c</fullName>
    <label>BB Purchased Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>