UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BBcust__c.field-meta.xml
<CustomField>
    <fullName>BBcust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Existing Frontier Broadband Customer (FiberOptic/Fiber or Cooper)</description>
    <inlineHelpText>Existing Frontier Broadband Customer (FiberOptic/Fiber or Cooper)</inlineHelpText>
    <label>BBcust</label>
    <type>Checkbox</type>
</CustomField>