UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BDM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>BDM_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDM Assigned</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>Multifamily BDM</value>
        </filterItems>
        <filterItems>
            <field>User.FirstName</field>
            <operation>equals</operation>
            <value>Unassigned</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>