UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BEN_Billed_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>BEN_Billed_Entity_Number__c</fullName>
    <description>Used to identify ERATE Customers.</description>
    <inlineHelpText>Code for ERate Customers</inlineHelpText>
    <label>BEN/Billed Entity Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>