UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BHSI_Customer__c.field-meta.xml
<CustomField>
    <fullName>BHSI_Customer__c</fullName>
    <description>Business Hish Speed Customer Indicator</description>
    <inlineHelpText>Identifies customers that currently have Frontier Business High Speed service</inlineHelpText>
    <label>BHSI Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>