UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BHSI_Customer_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>BHSI_Customer_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Service address has some type of active Business HSI product</inlineHelpText>
    <label>BHSI Customer</label>
    <type>Checkbox</type>
</CustomField>