UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Big_Box_ARC_ID_Wal_Mart_Only__c.field-meta.xml
<CustomField>
    <fullName>Big_Box_ARC_ID_Wal_Mart_Only__c</fullName>
    <label>Big Box ARC ID (Wal-Mart Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>