UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Big_Box_Associated_Retailer__c.field-meta.xml
<CustomField>
    <fullName>Big_Box_Associated_Retailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Big Box Associated Retailer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Companies (Big Box Associated Retailer)</relationshipLabel>
    <relationshipName>Companies_Big_Box</relationshipName>
    <type>Lookup</type>
</CustomField>