UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Big_Box_Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Big_Box_Store_Number__c</fullName>
    <label>Big Box Store Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>