UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <label>BillingCycle</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>