UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Branch_Ind__c.field-meta.xml
<CustomField>
    <fullName>Branch_Ind__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>A code which describes the organizational status of the business. &quot;IF&quot; = in FTR footprint; &quot;OOF&quot; = outside the FTR serving area.</inlineHelpText>
    <label>Branch Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>OOF-Branch</fullName>
            </value>
            <value>
                <fullName>OOF-HQ</fullName>
            </value>
            <value>
                <fullName>OOF-Single</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>IF-Branch</fullName>
            </value>
            <value>
                <fullName>IF-HQ</fullName>
            </value>
            <value>
                <fullName>IF-Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>