UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Branch_Ind_New__c.field-meta.xml
<CustomField>
    <fullName>Branch_Ind_New__c</fullName>
    <description>New field based on Go To Market Strategy with Branch Indentifers - New Field per Randy Gromlich</description>
    <inlineHelpText>Branch location In and Out of Footprint</inlineHelpText>
    <label>Branch_Ind_New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>OOF-Branch</fullName>
            </value>
            <value>
                <fullName>OOF-HQ</fullName>
            </value>
            <value>
                <fullName>OOF-Single</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>