UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BTN_Number__c.field-meta.xml
<CustomField>
    <fullName>BTN_Number__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTN Number</label>
    <type>Text</type>
</CustomField>