UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/BTN_Sequence_ID_formula__c.field-meta.xml
<CustomField>
    <fullName>BTN_Sequence_ID_formula__c</fullName>
    <formula>ParentSequenceId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BTN Sequence ID</label>
    <type>Text</type>
</CustomField>