UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Building_Network__c.field-meta.xml
<CustomField>
    <fullName>Building_Network__c</fullName>
    <label>Building Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiber_Building</fullName>
            </value>
            <value>
                <fullName>Copper_Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>