UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <description>Created for Randy Gromlich to provide data for Lit Building results provided Jess Beller</description>
    <inlineHelpText>Indicates availability of fiber technology at the service location:
Lit = fiber exists in the building
Tier 1 = fiber splice point is w/in 2,000 ft 
Tier 2 = fiber splice point is w/in 4,000 ft 
Tier 3 = fiber not available w/in 4,000 ft; BDT required</inlineHelpText>
    <label>Building Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>