UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Bus_Extreme_CTF__c.field-meta.xml
<CustomField>
    <fullName>Bus_Extreme_CTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bus Extreme CTF</label>
    <type>Checkbox</type>
</CustomField>